MySQL adaptation and first migration

--- a/SalesWebMVC/appsettings.json
+++ b/SalesWebMVC/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-fbe572e3-6e12-4f94-942e-1a2b375c4566;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "SalesWebMVCContext": "server=localhost;userid=root;password=;database=saleswebmvcappdb"
   }
 }
